# localgpt

./: .gitignore  README.md  pyproject.toml  run.bat
.streamlit/: config.toml
src/: main.py
