[tool.poetry]
name = "llmchat-ollama"
version = "0.1.0"
description = ""
authors = ["Maverick Wong <mvrckwong@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.31.1"
loguru = "^0.7.2"
openai = "^1.12.0"
wikipedia = "^1.4.0"
langchain = "^0.1.7"
watchdog = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
